# AdventOfCode2015

./: AoC.hsfiles  README.md
Day1/: .dir-locals.el  Day1.cabal  readme.md
Day1/app/: Main.hs
Day1/src/: Solution.hs
Day1/test/: SolutionSpec.hs  Spec.hs
Day10/: Day10.cabal  readme.md
Day10/app/: Main.hs
Day10/src/: Solution.hs
Day10/test/: SolutionSpec.hs
Day11/: Day11.cabal  readme.md
Day11/src/: Solution.hs
Day12/: Day12.cabal  readme.md
Day12/src/: Solution.hs
Day12/test/: SolutionSpec.hs
Day13/: Day13.cabal  readme.md
Day13/src/: Parser.hs  Solution.hs
Day13/test/: SolutionSpec.hs
Day14/: Day14.cabal  readme.md
Day14/src/: Solution.hs
Day14/test/: SolutionSpec.hs
Day15/: Day15.cabal  readme.md
Day15/src/: Solution.hs
Day16/: Day16.cabal  readme.md
Day16/src/: Solution.hs
Day17/: Day17.cabal  readme.md
Day17/src/: Solution.hs
Day18/: Day18.cabal  readme.md
Day18/src/: Solution.hs
Day19/: Day19.cabal  readme.md  stack.yaml
Day19/src/: Solution.hs
Day2/: Day2.cabal  readme.md
Day2/src/: Solution.hs
Day2/test/: SolutionSpec.hs
Day20/: Day20.cabal  readme.md
Day20/src/: Solution.hs
Day21/: Day21.cabal  readme.md
Day21/src/: Solution.hs
Day22/: Day22.cabal  readme.md  stack.yaml
Day22/src/: Solution.hs
Day23/: Day23.cabal  readme.md
Day23/src/: Solution.hs
Day24/: Day24.cabal  readme.md
Day24/src/: Solution.hs
Day25/: Day25.cabal  readme.md
Day25/src/: Solution.hs
Day25/test/: SolutionSpec.hs
Day3/: Day3.cabal  readme.md
Day3/src/: Solution.hs
Day3/test/: SolutionSpec.hs
Day4/: Day4.cabal  readme.md
Day4/src/: Solution.hs
Day5/: Day5.cabal  readme.md
Day5/src/: Solution.hs
Day5/test/: SolutionSpec.hs
Day6/: Day6.cabal  readme.md
Day6/src/: Solution.hs
Day7/: Day7.cabal  readme.md
Day7/app/: Main.hs
Day7/src/: Graph.hs  Parser.hs  Solution.hs
Day7/test/: SolutionSpec.hs
Day8/: Day8.cabal  readme.md
Day8/src/: Solution.hs
Day8/test/: SolutionSpec.hs
Day9/: Day9.cabal  readme.md
Day9/src/: Graph.hs  Solution.hs
