name:                Day11
version:             0.1.0.0
synopsis:            Advent of Code Day11
homepage:            https://github.com/https://github.com/CarstenKoenig/AdventOfCode2015/Day11/readme.md
license:             MIT
license-file:        ../LICENSE
author:              Carsten König
maintainer:          Carsten.gettingsharper.de
copyright:           Carsten König 2017
category:            Fun
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solution
  build-depends:       base >= 4.7 && < 5
                     , digits
  default-language:    Haskell2010

executable Day11
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Day11
  default-language:    Haskell2010
