name:                Day2
version:             0.1.0.0
synopsis:            Advent of Code Day2
homepage:            https://github.com/https://github.com/CarstenKoenig/AdventOfCode2015/Day2/readme.md
license:             MIT
license-file:        ../LICENSE
author:              Carsten König
maintainer:          Carsten.gettingsharper.de
copyright:           Carsten König 2017
category:            Fun
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solution
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
  default-language:    Haskell2010

executable Day2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Day2
  default-language:    Haskell2010

test-suite Day2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SolutionSpec
  build-depends:       base
                     , Day2
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
