name:                Day23
version:             0.1.0.0
synopsis:            Advent of Code Day23
homepage:            https://github.com/https://github.com/CarstenKoenig/AdventOfCode2015/Day23/readme.md
license:             MIT
license-file:        ../LICENSE
author:              Carsten König
maintainer:          Carsten.gettingsharper.de
copyright:           Carsten König 2017
category:            Fun
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solution
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010

executable Day23
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Day23
  default-language:    Haskell2010
