name:                Day4
version:             0.1.0.0
synopsis:            Advent of Code Day4
homepage:            https://github.com/https://github.com/CarstenKoenig/AdventOfCode2015/Day4/readme.md
license:             MIT
license-file:        ../LICENSE
author:              Carsten König
maintainer:          Carsten.gettingsharper.de
copyright:           Carsten König 2017
category:            Fun
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Solution
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , bytestring
                     , cryptonite
                     , memory
  default-language:    Haskell2010

executable Day4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Day4
  default-language:    Haskell2010
